--- a/style/style.css
+++ b/style/style.css
@@ -7,51 +7,6 @@
   font-family: 'Roboto';
 }
 
-.main {
-  height: 100vh;
-}
-
-.main #splash1 {
-  position: absolute;
-  right: 0;
-  z-index: -1;
-  width: 30vw;
-}
-
-.main #sebarz {
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-  -webkit-transform-origin: left top;
-          transform-origin: left top;
-  position: absolute;
-  top: 110%;
-  left: -50px;
-  font-size: 12em;
-  text-transform: uppercase;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  color: #DBDBDB;
-  z-index: -1;
-}
-
-.main .hello {
-  position: absolute;
-  top: 70%;
-  right: 52%;
-}
-
-.main .hello h1 {
-  font-size: 4em;
-  font-weight: 900;
-}
-
-.main .hello p {
-  font-size: 2em;
-  font-weight: 500;
-  color: #a9a9a9;
-}
-
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -84,5 +39,58 @@ nav ul a {
   list-style: none;
   text-decoration: none;
   color: #585858;
+}
+
+.main {
+  height: 100vh;
+}
+
+.main #splash1 {
+  position: absolute;
+  right: 0;
+  z-index: -1;
+  width: 30vw;
+}
+
+.main #sebarz {
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  position: absolute;
+  top: 120%;
+  left: -50px;
+  font-size: 12em;
+  text-transform: uppercase;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  color: #DBDBDB;
+  z-index: -1;
+}
+
+.main .hello {
+  position: absolute;
+  top: 70%;
+  right: 52%;
+}
+
+.main .hello h1 {
+  font-size: 4em;
+  font-weight: 900;
+}
+
+.main .hello p {
+  font-size: 2em;
+  font-weight: 500;
+  color: #a9a9a9;
+}
+
+.main .hello #heroiam {
+  position: absolute;
+  bottom: 0;
+  left: 110%;
+  height: 500px;
+  width: 500px;
 }
 /*# sourceMappingURL=style.css.map */
