--- a/style/style.scss
+++ b/style/style.scss
@@ -33,15 +33,16 @@ nav{
         position: absolute;
         right: 0;
         z-index: -1;
-        width: 30vw;
+        width: 28vw;
     }
     #sebarz{
-        transform: rotate(-90deg);
+        transform: rotate(90deg);
         transform-origin: left top;
         position: absolute;
-        top: 120%;
-        left: -50px;
-        font-size: 12em;
+        font-weight: 900;
+        left: 165px;
+        top: -4%;
+        font-size: 11em;
         text-transform: uppercase;
         width: max-content;
         color:#DBDBDB;
@@ -62,14 +63,10 @@ nav{
         }
         #heroiam{
             position: absolute;
-            bottom: 0;
+            bottom: 30px;
             left: 110%;
-            height: 500px;
-            width: 500px;
+            height: 36vw;
+            width: auto;
         }
     }
 }
-
-
-
-
