--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
   margin: 0;
   font-size: 16px;
   font-family: 'Roboto';
+  overflow-x: hidden;
 }
 
 nav {
@@ -70,6 +71,13 @@ nav ul a {
   z-index: -1;
 }
 
+.main #heroiam {
+  position: absolute;
+  left: 57%;
+  height: 36vw;
+  width: auto;
+}
+
 .main .hello {
   position: absolute;
   top: 70%;
@@ -87,11 +95,44 @@ nav ul a {
   color: #a9a9a9;
 }
 
-.main .hello #heroiam {
+.aboutme {
+  height: 150vh;
+  margin-top: 80px;
+  overflow: hidden;
+}
+
+.aboutme #splash2 {
   position: absolute;
-  bottom: 30px;
-  left: 110%;
-  height: 36vw;
+  left: 0;
+  z-index: -1;
+  width: 30vw;
+}
+
+.aboutme #aboutme {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  position: absolute;
+  font-weight: 900;
+  left: 100%;
+  top: 60vw;
+  line-height: 100px;
+  font-size: 8em;
+  overflow: hidden;
+  text-transform: uppercase;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  color: #DBDBDB;
+  z-index: -1;
+}
+
+.aboutme #heroabout {
+  position: relative;
+  height: 40vw;
+  left: 10%;
+  top: 10vw;
   width: auto;
 }
 /*# sourceMappingURL=style.css.map */
