--- a/style/style.scss
+++ b/style/style.scss
@@ -104,4 +104,33 @@ nav{
         top: 10vw;
         width: auto;
     }
+    .about{
+        position: relative;
+        left: 50%;
+        bottom: 30%;
+        width: 33%;
+        h1{
+            font-size: 4em;
+            font-weight: 900;
+        }
+        p{
+            font-size: 1.4em;
+            font-weight: 400;
+            color: #8d8d8d;
+            margin: 10% 0   ;
+        }
+
+        button{
+            background-color: #F16500;
+            padding: 15px;
+            border-radius: 10px;
+            width: 150px;
+            line-height: 10px;
+            color: white;
+            font-weight: 400;
+            font-size: 1.4em;
+            border: none;
+    
+        }
+    }
 }
