--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,7 @@ nav ul a {
 }
 
 .aboutme {
-  height: 150vh;
+  height: 130vh;
   margin-top: 80px;
   overflow: hidden;
 }
@@ -165,5 +165,97 @@ nav ul a {
   font-weight: 400;
   font-size: 1.4em;
   border: none;
+}
+
+.myskills {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.myskills #myskills {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transform-origin: left top;
+          transform-origin: left top;
+  position: relative;
+  font-weight: 900;
+  left: 12px;
+  top: 3%;
+  font-size: 8em;
+  text-transform: uppercase;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  color: #DBDBDB;
+  z-index: -1;
+}
+
+.myskills h1 {
+  width: 100%;
+  text-align: center;
+  font-size: 4em;
+  font-weight: 900;
+  margin-top: -4%;
+}
+
+.myskills .cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 75%;
+  padding: 6%;
+  text-align: center;
+}
+
+.myskills .cards h1 {
+  font-size: 1.8em;
+  font-weight: 400;
+  text-align: left;
+}
+
+.myskills .cards p {
+  font-weight: 300;
+  font-size: 1.2em;
+}
+
+.myskills .cards div {
+  padding: 2%;
+  -webkit-box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  margin: 3%;
+  width: 20%;
+  height: 85%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.myskills .cards #card1 {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(5.84%, #E06B15), to(#FF9549));
+  background: linear-gradient(180deg, #E06B15 5.84%, #FF9549 100%);
+  color: white;
+}
+
+.myskills .cards #card2 {
+  border-left: 6px solid #E06B15;
+}
+
+.myskills .cards #card3 {
+  border-left: 6px solid #49C5D6;
 }
 /*# sourceMappingURL=style.css.map */
