--- a/style/style.scss
+++ b/style/style.scss
@@ -60,7 +60,7 @@ nav{
         top: 70%;
         right: 52%;
         h1{
-            font-size: 4em;
+            font-size: 3em;
             font-weight: 900;
         }
         p{
@@ -110,7 +110,7 @@ nav{
         bottom: 30%;
         width: 33%;
         h1{
-            font-size: 4em;
+            font-size: 3em;
             font-weight: 900;
         }
         p{
@@ -155,7 +155,7 @@ nav{
     h1{
         width: 100%;
         text-align: center;
-        font-size: 4em;
+        font-size: 3em;
         font-weight: 900;
         margin-top: -4%;        
     }
@@ -197,6 +197,42 @@ nav{
         }
         #card3{
             border-left: 6px solid #49C5D6; 
+        }
+    }
+}
+
+.myproyects{
+    height: 100vh;
+    overflow: hidden;
+    background-image: url(/images/proyectsbg.svg);
+    #proyectsabout{
+        display: flex;
+        flex-direction: row;
+        margin-top: 150px;
+        justify-content: space-around;
+        #proyectsabouttext{
+            h1{
+                font-size: 3em;
+                font-weight: 900;
+                color: white;
+                text-transform: uppercase;
+            }
+            p{
+                color: white; 
+                font-size: 1.4em;
+                font-weight: 300;
+            }
+        }
+        button{
+            background-color: #F16500;
+            padding: 10px;
+            border-radius: 10px;
+            width: 230px;
+            line-height: 5px;
+            color: white;
+            font-weight: 400;
+            font-size: 1.4em;
+            border: none;
         }
     }
 }
