Started contact section

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,6 @@
   margin: 0;
   font-size: 16px;
   font-family: 'Roboto';
-  overflow-x: hidden;
 }
 
 nav {
@@ -156,9 +155,9 @@ nav ul a {
 }
 
 .aboutme .about button {
-  background-color: #F16500;
-  padding: 15px;
+  background: radial-gradient(46.66% 46.66% at 50.73% 42.76%, #34DB63 0%, #59C18D 100%);
   border-radius: 10px;
+  padding: 20px;
   width: 150px;
   line-height: 10px;
   color: white;
@@ -246,21 +245,20 @@ nav ul a {
 }
 
 .myskills .cards #card1 {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(5.84%, #E06B15), to(#FF9549));
-  background: linear-gradient(180deg, #E06B15 5.84%, #FF9549 100%);
+  background: linear-gradient(174.8deg, #34DB63 1.27%, #59C18D 101.37%);
   color: white;
 }
 
 .myskills .cards #card2 {
-  border-left: 6px solid #E06B15;
+  border-left: 6px solid #59C18D;
 }
 
 .myskills .cards #card3 {
-  border-left: 6px solid #49C5D6;
+  border-left: 6px solid #008585;
 }
 
 .myproyects {
-  height: 100vh;
+  height: 130vh;
   overflow: hidden;
   background-image: url(/images/proyectsbg.svg);
 }
@@ -292,14 +290,98 @@ nav ul a {
 }
 
 .myproyects #proyectsabout button {
-  background-color: #F16500;
-  padding: 10px;
+  background-color: #59C18D;
+  padding: 5px;
   border-radius: 10px;
   width: 230px;
+  height: 70px;
   line-height: 5px;
   color: white;
   font-weight: 400;
   font-size: 1.4em;
   border: none;
+}
+
+.swiper-container {
+  width: 90%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 100px;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.swiper-container .swiper-slide {
+  width: 600px;
+  height: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.808);
+  border-radius: 10px;
+}
+
+.swiper-container .swiper-slide :first-child {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.swiper-container .swiper-slide img {
+  width: 600px;
+  height: 250px;
+  border-radius: 10px 10px 0 0;
+}
+
+.swiper-container .swiper-slide .text {
+  height: 70px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 15px;
+}
+
+.sayhello {
+  height: 30vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sayhello .email {
+  background-color: white;
+  border-radius: 10px;
+  color: green;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=style.css.map */
