--- a/style/style.scss
+++ b/style/style.scss
@@ -4,7 +4,6 @@
     margin: 0;
     font-size: 16px;
     font-family: 'Roboto';
-    overflow-x: hidden;
 }
 
 nav{
@@ -121,9 +120,9 @@ nav{
         }
 
         button{
-            background-color: #F16500;
-            padding: 15px;
+            background: radial-gradient(46.66% 46.66% at 50.73% 42.76%, #34DB63 0%, #59C18D 100%);
             border-radius: 10px;
+            padding: 20px;
             width: 150px;
             line-height: 10px;
             color: white;
@@ -189,20 +188,20 @@ nav{
         }
 
         #card1{
-            background: linear-gradient(180deg, #E06B15 5.84%, #FF9549 100%);
+            background: linear-gradient(174.8deg, #34DB63 1.27%, #59C18D 101.37%);
             color: white;
         }
         #card2{
-            border-left: 6px solid #E06B15;
+            border-left: 6px solid #59C18D;
         }
         #card3{
-            border-left: 6px solid #49C5D6; 
+            border-left: 6px solid #008585; 
         }
     }
 }
 
 .myproyects{
-    height: 100vh;
+    height: 130vh;
     overflow: hidden;
     background-image: url(/images/proyectsbg.svg);
     #proyectsabout{
@@ -224,10 +223,11 @@ nav{
             }
         }
         button{
-            background-color: #F16500;
-            padding: 10px;
+            background-color: #59C18D;
+            padding: 5px;
             border-radius: 10px;
             width: 230px;
+            height: 70px;
             line-height: 5px;
             color: white;
             font-weight: 400;
@@ -235,4 +235,57 @@ nav{
             border: none;
         }
     }
+}
+
+.swiper-container {
+    width: 90%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-top: 100px;
+    height: 100%;
+    border-radius: 10px;
+  .swiper-slide{
+    width: 600px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.808);
+    border-radius: 10px;
+    :first-child{
+        flex-grow: 1;
+    }
+    img{
+        width: 600px;
+        height: 250px;
+        border-radius: 10px 10px 0 0;
+    }
+    .text{
+        height: 70px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        padding: 15px;
+
+    }
+  }
+}
+
+.sayhello{
+    height: 30vh;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    .email{
+        background-color: white;
+        border-radius: 10px;
+        color: green;
+        display: flex;
+        flex-direction: column;
+    }
+
 }
