--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
   margin: 0;
   font-size: 16px;
   font-family: 'Roboto';
+  text-decoration: none;
 }
 
 nav {
@@ -374,14 +375,34 @@ nav ul a {
 
 .sayhello .email {
   background-color: white;
+  position: relative;
+  bottom: 50%;
+  width: 50vw;
+  height: 25vh;
+  -webkit-box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  color: green;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  font-weight: 900;
+}
+
+.sayhello .email h1 {
+  font-size: 2em;
+  color: gray;
+}
+
+.sayhello .email a {
+  text-decoration: none;
+  color: #59C18D;
+  font-size: 3em;
 }
 /*# sourceMappingURL=style.css.map */
