--- a/style/style.scss
+++ b/style/style.scss
@@ -1,251 +1,257 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-size: 16px;
-    font-family: 'Roboto';
-    text-decoration: none;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-size: 16px;
+  font-family: "Roboto";
+  text-decoration: none;
 }
 
-nav{
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 10px 10px 10px 120px;
+  padding: 10px;
+  width: 65%;
+  img {
+    width: 6em;
+    height: auto;
+  }
+  ul {
     display: flex;
+    justify-content: space-between;
+    width: 65%;
+    a {
+      font-size: 1.2em;
+      width: max-content;
+      list-style: none;
+      text-decoration: none;
+      color: #585858;
+    }
+  }
+}
+
+.main {
+  height: 100vh;
+  #splash1 {
+    position: absolute;
+    right: 0;
+    z-index: -1;
+    width: 28vw;
+  }
+  #sebarz {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    position: absolute;
+    font-weight: 900;
+    left: 165px;
+    top: -4%;
+    font-size: 11em;
+    text-transform: uppercase;
+    width: max-content;
+    color: #dbdbdb;
+    z-index: -1;
+  }
+  #heroiam {
+    position: absolute;
+    left: 57%;
+    height: 36vw;
+    width: auto;
+  }
+  .hello {
+    position: absolute;
+    top: 70%;
+    right: 52%;
+    h1 {
+      font-size: 3em;
+      font-weight: 900;
+    }
+    p {
+      font-size: 2em;
+      font-weight: 500;
+      color: #a9a9a9;
+    }
+  }
+}
+
+.aboutme {
+  height: 130vh;
+  margin-top: 80px;
+  overflow: hidden;
+  #splash2 {
+    position: absolute;
+    left: 0;
+    z-index: -1;
+    width: 30vw;
+  }
+  #aboutme {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    position: absolute;
+    font-weight: 900;
+    left: 100%;
+    top: 60vw;
+    line-height: 100px;
+    font-size: 8em;
+    overflow: hidden;
+    text-transform: uppercase;
+    width: max-content;
+    color: #dbdbdb;
+    z-index: -1;
+  }
+  #heroabout {
+    position: relative;
+    height: 40vw;
+    left: 10%;
+    top: 10vw;
+    width: auto;
+  }
+  .about {
+    position: relative;
+    left: 50%;
+    bottom: 30%;
+    width: 33%;
+    h1 {
+      font-size: 3em;
+      font-weight: 900;
+    }
+    p {
+      font-size: 1.4em;
+      font-weight: 400;
+      color: #8d8d8d;
+      margin: 10% 0;
+    }
+
+    button {
+      background: radial-gradient(
+        46.66% 46.66% at 50.73% 42.76%,
+        #34db63 0%,
+        #59c18d 100%
+      );
+      border-radius: 10px;
+      padding: 20px;
+      width: 150px;
+      line-height: 10px;
+      color: white;
+      font-weight: 400;
+      font-size: 1.4em;
+      border: none;
+    }
+  }
+}
+
+.myskills {
+  height: 100vh;
+  overflow: hidden;
+  #myskills {
+    transform: rotate(90deg);
+    transform-origin: left top;
+    position: relative;
+    font-weight: 900;
+    left: 12px;
+    top: 3%;
+    font-size: 8em;
+    text-transform: uppercase;
+    width: max-content;
+    color: #dbdbdb;
+    z-index: -1;
+  }
+
+  h1 {
+    width: 100%;
+    text-align: center;
+    font-size: 3em;
+    font-weight: 900;
+    margin-top: -4%;
+  }
+  .cards {
+    display: flex;
+    overflow: hidden;
+    flex-direction: row;
+    justify-content: center;
+    height: 75%;
+    padding: 6%;
+    text-align: center;
+    h1 {
+      font-size: 1.8em;
+      font-weight: 400;
+      text-align: left;
+    }
+    p {
+      font-weight: 300;
+      font-size: 1.2em;
+    }
+    div {
+      padding: 2%;
+      box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+      border-radius: 20px;
+      margin: 3%;
+      width: 20%;
+      height: 85%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+    }
+
+    #card1 {
+      background: linear-gradient(174.8deg, #34db63 1.27%, #59c18d 101.37%);
+      color: white;
+    }
+    #card2 {
+      border-left: 6px solid #59c18d;
+    }
+    #card3 {
+      border-left: 6px solid #008585;
+    }
+  }
+}
+
+#myproyects {
+  height: 130vh;
+  overflow: hidden;
+  background-image: url(/images/proyectsbg.svg);
+  #proyectsabout {
+    display: flex;
+    flex-direction: row;
+    margin-top: 150px;
     justify-content: space-around;
-    align-items: center;
-    margin: 10px 10px 10px 150px;
-    padding: 10px;
-    width: 50%;
-    ul{
-        display: flex;
-        justify-content: space-between;
-        width: 60%;
-        a{
-            font-size: 1.2em;
-            width: max-content;
-            list-style: none;
-            text-decoration: none;
-            color: #585858;
-        }
-    }
-}
-
-.main{
-    height: 100vh;
-    #splash1{
-        position: absolute;
-        right: 0;
-        z-index: -1;
-        width: 28vw;
-    }
-    #sebarz{
-        transform: rotate(90deg);
-        transform-origin: left top;
-        position: absolute;
-        font-weight: 900;
-        left: 165px;
-        top: -4%;
-        font-size: 11em;
-        text-transform: uppercase;
-        width: max-content;
-        color:#DBDBDB;
-        z-index: -1;
-    }
-    #heroiam{
-            position: absolute;
-            left: 57%;
-            height: 36vw;
-            width: auto;
-        }
-    .hello{
-        position: absolute;
-        top: 70%;
-        right: 52%;
-        h1{
-            font-size: 3em;
-            font-weight: 900;
-        }
-        p{
-            font-size: 2em;
-            font-weight: 500;
-            color: #a9a9a9;
-        }
-    
-    }
-}
-
-.aboutme{
-    height: 130vh;
-    margin-top: 80px;
-    overflow: hidden;
-    #splash2{
-        position: absolute;
-        left: 0;
-        z-index: -1;
-        width: 30vw;
-    }
-    #aboutme{
-        transform: rotate(90deg);
-        transform-origin: left top;
-        position: absolute;
-        font-weight: 900;
-        left: 100%;
-        top: 60vw;
-        line-height: 100px;
-        font-size: 8em;
-        overflow: hidden;
-        text-transform: uppercase;
-        width: max-content;
-        color:#DBDBDB;
-        z-index: -1;
-    }
-    #heroabout{
-        position: relative;
-        height: 40vw;
-        left: 10%;
-        top: 10vw;
-        width: auto;
-    }
-    .about{
-        position: relative;
-        left: 50%;
-        bottom: 30%;
-        width: 33%;
-        h1{
-            font-size: 3em;
-            font-weight: 900;
-        }
-        p{
-            font-size: 1.4em;
-            font-weight: 400;
-            color: #8d8d8d;
-            margin: 10% 0   ;
-        }
-
-        button{
-            background: radial-gradient(46.66% 46.66% at 50.73% 42.76%, #34DB63 0%, #59C18D 100%);
-            border-radius: 10px;
-            padding: 20px;
-            width: 150px;
-            line-height: 10px;
-            color: white;
-            font-weight: 400;
-            font-size: 1.4em;
-            border: none;
-    
-        }
-    }
-}
-
-.myskills{
-    height: 100vh;
-    overflow: hidden;
-    #myskills{
-        transform: rotate(90deg);
-        transform-origin: left top;
-        position: relative;
-        font-weight: 900;
-        left: 12px;
-        top: 3%;
-        font-size: 8em;
-        text-transform: uppercase;
-        width: max-content;
-        color:#DBDBDB;
-        z-index: -1;
-    }
-
-    h1{
-        width: 100%;
-        text-align: center;
+    #proyectsabouttext {
+      h1 {
         font-size: 3em;
         font-weight: 900;
-        margin-top: -4%;        
+        color: white;
+        text-transform: uppercase;
+      }
+      p {
+        color: white;
+        font-size: 1.4em;
+        font-weight: 300;
+      }
     }
-    .cards{
-        display: flex;
-        overflow: hidden;
-        flex-direction: row;
-        justify-content: center;
-        height: 75%;
-        padding: 6%;
-        text-align: center;
-        h1{
-            font-size: 1.8em;
-            font-weight: 400;
-            text-align: left;
-        }
-        p{
-            font-weight: 300;
-            font-size: 1.2em;
-        }
-        div{
-            padding: 2%;
-            box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
-            border-radius: 20px;
-            margin: 3%;
-            width: 20%;
-            height: 85%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-        }
-
-        #card1{
-            background: linear-gradient(174.8deg, #34DB63 1.27%, #59C18D 101.37%);
-            color: white;
-        }
-        #card2{
-            border-left: 6px solid #59C18D;
-        }
-        #card3{
-            border-left: 6px solid #008585; 
-        }
+    button {
+      background-color: #59c18d;
+      padding: 5px;
+      border-radius: 10px;
+      width: 230px;
+      height: 70px;
+      line-height: 5px;
+      color: white;
+      font-weight: 400;
+      font-size: 1.4em;
+      border: none;
     }
-}
-
-.myproyects{
-    height: 130vh;
-    overflow: hidden;
-    background-image: url(/images/proyectsbg.svg);
-    #proyectsabout{
-        display: flex;
-        flex-direction: row;
-        margin-top: 150px;
-        justify-content: space-around;
-        #proyectsabouttext{
-            h1{
-                font-size: 3em;
-                font-weight: 900;
-                color: white;
-                text-transform: uppercase;
-            }
-            p{
-                color: white; 
-                font-size: 1.4em;
-                font-weight: 300;
-            }
-        }
-        button{
-            background-color: #59C18D;
-            padding: 5px;
-            border-radius: 10px;
-            width: 230px;
-            height: 70px;
-            line-height: 5px;
-            color: white;
-            font-weight: 400;
-            font-size: 1.4em;
-            border: none;
-        }
-    }
+  }
 }
 
 .swiper-container {
-    width: 90%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin-top: 100px;
-    height: 100%;
-    border-radius: 10px;
-  .swiper-slide{
+  width: 90%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 100px;
+  height: 100%;
+  border-radius: 10px;
+  .swiper-slide {
     width: 600px;
     height: 350px;
     display: flex;
@@ -254,54 +260,73 @@ nav{
     text-align: center;
     background-color: rgba(255, 255, 255, 0.808);
     border-radius: 10px;
-    :first-child{
-        flex-grow: 1;
+    :first-child {
+      flex-grow: 1;
     }
-    img{
-        width: 600px;
-        height: 250px;
-        border-radius: 10px 10px 0 0;
+    img {
+      width: 600px;
+      height: 250px;
+      border-radius: 10px 10px 0 0;
     }
-    .text{
-        height: 70px;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        justify-content: center;
-        padding: 15px;
-
+    .text {
+      height: 100px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      padding: 15px;
+      img {
+        width: 30px;
+        padding: 10px 0;
+        height: auto;
+      }
     }
   }
 }
 
-.sayhello{
-    height: 30vh;
+.sayhello {
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  #email {
+    background-color: white;
+    position: relative;
+    bottom: 35%;
+    width: 50vw;
+    height: 25vh;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
     display: flex;
-    text-align: center;
-    align-items: center;
     justify-content: center;
-    .email{
-        background-color: white;
-        position: relative;
-        bottom: 50%;
-        width: 50vw;
-        height: 25vh;
-        box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        font-weight: 900;
-        h1{
-            font-size: 2em;
-            color: gray;
-        }
-        a{
-            text-decoration: none;
-            color: #59C18D;
-            font-size: 3em;
-        }
-
+    flex-direction: column;
+    font-weight: 900;
+    h1 {
+      font-size: 2em;
+      color: gray;
     }
+    a {
+      text-decoration: none;
+      color: #59c18d;
+      font-size: 3em;
+    }
+  }
+  .footer-nav {
+    width: 50%;
+    height: 10px;
+    margin: 0 auto;
+    position: relative;
+    bottom: 10%;
+  }
+  .logos-nav {
+    width: 30%;
+    margin: 0 auto;
+    img {
+      width: 35px;
+      height: auto;
+    }
+  }
 }
