--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,13 @@ nav {
 nav img {
   width: 6em;
   height: auto;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+nav img:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 nav ul {
@@ -45,6 +52,14 @@ nav ul a {
   list-style: none;
   text-decoration: none;
   color: #585858;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+nav ul a:hover {
+  font-size: 1.5em;
+  color: #59c18d;
+  font-weight: 500;
 }
 
 .main {
@@ -161,15 +176,27 @@ nav ul a {
 }
 
 .aboutme .about button {
-  background: radial-gradient(46.66% 46.66% at 50.73% 42.76%, #34db63 0%, #59c18d 100%);
+  background: white;
+  color: black;
+  outline: none;
   border-radius: 10px;
   padding: 20px;
   width: 150px;
+  border: none;
   line-height: 10px;
-  color: white;
   font-weight: 400;
   font-size: 1.4em;
-  border: none;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  cursor: pointer;
+  border: #59c18d 3px solid;
+}
+
+.aboutme .about button:hover {
+  -webkit-box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+  background: #59c18d;
+  color: white;
 }
 
 .myskills {
@@ -233,8 +260,8 @@ nav ul a {
 
 .myskills .cards div {
   padding: 2%;
-  -webkit-box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
-          box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   margin: 3%;
   width: 20%;
@@ -248,11 +275,20 @@ nav ul a {
           flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .myskills .cards #card1 {
   background: linear-gradient(174.8deg, #34db63 1.27%, #59c18d 101.37%);
   color: white;
+}
+
+.myskills .cards div:hover {
+  -webkit-box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .myskills .cards #card2 {
@@ -296,15 +332,27 @@ nav ul a {
 }
 
 #myproyects #proyectsabout button {
-  background-color: #59c18d;
+  background: white;
+  color: #150140;
   padding: 5px;
   border-radius: 10px;
   width: 230px;
   height: 70px;
   line-height: 5px;
-  color: white;
   font-weight: 400;
   font-size: 1.4em;
+  outline: none;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  cursor: pointer;
+  border: white 3px solid;
+}
+
+#myproyects #proyectsabout button:hover {
+  -webkit-box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+  background: #59c18d;
+  color: white;
   border: none;
 }
 
@@ -396,10 +444,10 @@ nav ul a {
   background-color: white;
   position: relative;
   bottom: 35%;
-  width: 50vw;
+  width: 45vw;
   height: 25vh;
-  -webkit-box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
-          box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -412,6 +460,8 @@ nav ul a {
       -ms-flex-direction: column;
           flex-direction: column;
   font-weight: 900;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .sayhello #email h1 {
@@ -423,6 +473,13 @@ nav ul a {
   text-decoration: none;
   color: #59c18d;
   font-size: 3em;
+}
+
+.sayhello #email:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.2);
 }
 
 .sayhello .footer-nav {
@@ -439,7 +496,12 @@ nav ul a {
 }
 
 .sayhello .logos-nav img {
-  width: 35px;
+  width: 40px;
   height: auto;
+}
+
+.sayhello .logos-nav img:hover {
+  -webkit-transform: scale(1.5) rotate(360deg);
+          transform: scale(1.5) rotate(360deg);
 }
 /*# sourceMappingURL=style.css.map */
