--- a/style/style.css
+++ b/style/style.css
@@ -115,6 +115,46 @@ nav ul a:hover {
   color: #a9a9a9;
 }
 
+.main .arriba {
+  background: #59c18d;
+  color: white;
+  -webkit-box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  border-radius: 50%;
+  width: 10vh;
+  height: 10vh;
+  bottom: 5%;
+  left: 5%;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  visibility: hidden;
+}
+
+.main .arriba svg {
+  fill: white;
+}
+
+.main .arriba:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
 .aboutme {
   height: 130vh;
   margin-top: 80px;
@@ -379,7 +419,8 @@ nav ul a:hover {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.808);
+  background-color: white;
+  color: #150140;
   border-radius: 10px;
 }
 
@@ -391,12 +432,14 @@ nav ul a:hover {
 
 .swiper-container .swiper-slide img {
   width: 600px;
-  height: 250px;
+  height: 100px;
   border-radius: 10px 10px 0 0;
+  -webkit-filter: saturate(0);
+          filter: saturate(0);
 }
 
 .swiper-container .swiper-slide .text {
-  height: 130px;
+  height: 100px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -409,17 +452,40 @@ nav ul a:hover {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 15px;
+  padding: 30px;
+  text-transform: uppercase;
 }
 
-.swiper-container .swiper-slide .text img {
+.swiper-container .swiper-slide .text .code-container {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.swiper-container .swiper-slide .text svg {
   width: 40px;
   padding: 10px 5px;
   height: auto;
+  fill: #150140;
+}
+
+.swiper-container .swiper-slide .text svg:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  fill: #59c18d;
+}
+
+.swiper-container .swiper-slide .text h3 {
+  font-size: 1.5em;
 }
 
 .swiper-container .swiper-slide .text p {
   padding: 5px;
+}
+
+.swiper-container .swiper-slide-active img {
+  -webkit-filter: saturate(1);
+          filter: saturate(1);
 }
 
 .sayhello {
