--- a/style/style.scss
+++ b/style/style.scss
@@ -83,6 +83,35 @@ nav {
       color: #a9a9a9;
     }
   }
+
+  .arriba {
+    background: #59c18d;
+    color: white;
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    border-radius: 50%;
+    width: 10vh;
+    height: 10vh;
+    bottom: 5%;
+    left: 5%;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.4s ease;
+    visibility: hidden;
+    svg {
+      fill: white;
+    }
+  }
+
+  .arriba:hover {
+    transform: scale(1.2);
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+  }
 }
 
 .aboutme {
@@ -289,32 +318,57 @@ nav {
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.808);
+    background-color: rgb(255, 255, 255);
+    color: #150140;
     border-radius: 10px;
     :first-child {
       flex-grow: 1;
     }
     img {
       width: 600px;
-      height: 250px;
+      height: 100px;
       border-radius: 10px 10px 0 0;
+      filter: saturate(0);
     }
+
     .text {
-      height: 130px;
+      height: 100px;
       width: 100%;
       display: flex;
       flex-direction: column;
       text-align: center;
       justify-content: center;
-      padding: 15px;
-      img {
+      padding: 30px;
+      text-transform: uppercase;
+
+      .code-container {
+        height: fit-content;
+      }
+
+      svg {
         width: 40px;
         padding: 10px 5px;
         height: auto;
+        fill: #150140;
+      }
+
+      svg:hover {
+        transform: scale(1.3);
+        fill: #59c18d;
+      }
+
+      h3 {
+        font-size: 1.5em;
       }
       p {
         padding: 5px;
       }
+    }
+  }
+
+  .swiper-slide-active {
+    img {
+      filter: saturate(1);
     }
   }
 }
